// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
    testID="container"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="decrementButton"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/decrement.png",
          }
        }
        style={
          [
            {
              "height": 30,
              "width": 30,
            },
            {
              "opacity": 0.5,
            },
          ]
        }
        testID="decrementImage"
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "black",
          "height": "100%",
          "width": 0.5,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="incrementButton"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/increment.png",
          }
        }
        style={
          [
            {
              "height": 30,
              "width": 30,
            },
            {
              "opacity": 1,
            },
          ]
        }
        testID="incrementImage"
      />
    </View>
  </View>
</View>
`;

exports[`render increment and decrement 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
    testID="container"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="decrementButton"
    >
      <Image
        source={
          {
            "uri": "https://reactnative.dev/docs/assets/favicon.png",
          }
        }
        style={
          {
            "opacity": 0.5,
          }
        }
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "black",
          "height": "100%",
          "width": 0.5,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="incrementButton"
    >
      <Image
        source={
          {
            "uri": "https://reactnative.dev/docs/assets/favicon.png",
          }
        }
        style={
          {
            "opacity": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`render increment step and decrement step 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
    testID="container"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="decrementBtn"
    >
      <Text>
        0
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "black",
          "height": "100%",
          "width": 0.5,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="incrementBtn"
    >
      <Text>
        0
      </Text>
    </View>
  </View>
</View>
`;

exports[`render text 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
    testID="container"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="decrementButton"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/decrement.png",
          }
        }
        style={
          [
            {
              "height": 30,
              "width": 30,
            },
            {
              "opacity": 0.5,
            },
          ]
        }
        testID="decrementImage"
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "black",
          "height": "100%",
          "width": 0.5,
        }
      }
      testID="separator"
    />
    <Text>
      0
    </Text>
    <View
      style={
        {
          "backgroundColor": "black",
          "height": "100%",
          "width": 0.5,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="incrementButton"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/increment.png",
          }
        }
        style={
          [
            {
              "height": 30,
              "width": 30,
            },
            {
              "opacity": 1,
            },
          ]
        }
        testID="incrementImage"
      />
    </View>
  </View>
</View>
`;

exports[`show center text 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
    testID="container"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="decrementButton"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/decrement.png",
          }
        }
        style={
          [
            {
              "height": 30,
              "width": 30,
            },
            {
              "opacity": 0.5,
            },
          ]
        }
        testID="decrementImage"
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "black",
          "height": "100%",
          "width": 0.5,
        }
      }
      testID="separator"
    />
    <Text
      style={
        {
          "fontSize": 24,
          "marginHorizontal": 8,
        }
      }
    >
      0
    </Text>
    <View
      style={
        {
          "backgroundColor": "black",
          "height": "100%",
          "width": 0.5,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="incrementButton"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/increment.png",
          }
        }
        style={
          [
            {
              "height": 30,
              "width": 30,
            },
            {
              "opacity": 1,
            },
          ]
        }
        testID="incrementImage"
      />
    </View>
  </View>
</View>
`;

exports[`show left text 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
    testID="container"
  >
    <Text
      style={
        {
          "fontSize": 24,
          "marginHorizontal": 8,
        }
      }
    >
      0
    </Text>
    <View
      style={
        {
          "backgroundColor": "black",
          "height": "100%",
          "width": 0.5,
        }
      }
      testID="separator"
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="decrementButton"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/decrement.png",
          }
        }
        style={
          [
            {
              "height": 30,
              "width": 30,
            },
            {
              "opacity": 0.5,
            },
          ]
        }
        testID="decrementImage"
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "black",
          "height": "100%",
          "width": 0.5,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="incrementButton"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/increment.png",
          }
        }
        style={
          [
            {
              "height": 30,
              "width": 30,
            },
            {
              "opacity": 1,
            },
          ]
        }
        testID="incrementImage"
      />
    </View>
  </View>
</View>
`;

exports[`show right text 1`] = `
<View>
  <View
    style={
      {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-evenly",
      }
    }
    testID="container"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="decrementButton"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/decrement.png",
          }
        }
        style={
          [
            {
              "height": 30,
              "width": 30,
            },
            {
              "opacity": 0.5,
            },
          ]
        }
        testID="decrementImage"
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "black",
          "height": "100%",
          "width": 0.5,
        }
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
          "padding": 4,
        }
      }
      testID="incrementButton"
    >
      <Image
        source={
          {
            "testUri": "../../../assets/increment.png",
          }
        }
        style={
          [
            {
              "height": 30,
              "width": 30,
            },
            {
              "opacity": 1,
            },
          ]
        }
        testID="incrementImage"
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "black",
          "height": "100%",
          "width": 0.5,
        }
      }
      testID="separator"
    />
    <Text
      style={
        {
          "fontSize": 24,
          "marginHorizontal": 8,
        }
      }
    >
      0
    </Text>
  </View>
</View>
`;
